@@ -37,29 +37,6 @@
     <build>
         <sourceDirectory>src/main/java</sourceDirectory>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.13.0</version>
-                <configuration>
-                    <source>11</source>
-                    <target>11</target>
-                </configuration>
-            </plugin>
-
-<!--        <plugins>-->
-<!--            <plugin>-->
-<!--                <groupId>org.apache.maven.plugins</groupId>-->
-<!--                <artifactId>maven-surefire-plugin</artifactId>-->
-<!--                <version>3.0.0-M5</version>-->
-<!--                <configuration>-->
-<!--                    &lt;!&ndash; Fork JVM for test execution &ndash;&gt;-->
-<!--                    <forkCount>1</forkCount> &lt;!&ndash; Ensure tests run in separate JVMs for better isolation &ndash;&gt;-->
-<!--                    <reuseForks>true</reuseForks> &lt;!&ndash; Reuse forks to optimize performance &ndash;&gt;-->
-<!--                    &lt;!&ndash; Optional: Limit the memory allocation if necessary to avoid JVM crashes &ndash;&gt;-->
-<!--                    <argLine>-Xmx2g -XX:MaxPermSize=512m</argLine>-->
-<!--                </configuration>-->
-<!--            </plugin>-->
 
             <plugin>
                 <groupId>org.jacoco</groupId>
@@ -79,10 +56,6 @@
                         <goals>
                             <goal>report</goal>
                         </goals>
-<!--                        <configuration>-->
-<!--                            <dataFile>F:/coverage-reports/jacoco.exec</dataFile>-->
-<!--                            <outputDirectory>F:/coverage-reports</outputDirectory>-->
-<!--                        </configuration>-->
                     </execution>
                 </executions>
             </plugin>
